--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -85,7 +85,6 @@
         <button class="button" onclick="runSpeedTest()">Run Speed Test</button>
 
         <div id="plot">
-            <h2>Speed over Time</h2>
             <img id="speed_plot" src="/plot" alt="Speed over time plot">
         </div>
 
@@ -94,44 +93,27 @@
         </div>
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.3.2/socket.io.js"></script>
     <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            fetchLatestSpeeds();
-            updatePlot()
-             // Set interval to run fetchLatestSpeeds every 2 seconds (2000 milliseconds)
-            setInterval(fetchLatestSpeeds, 2000);
+        const socket = io.connect('http://localhost:5000');
+
+        socket.on('connect', () => {
+            console.log('Connected to server');
         });
 
-        function fetchLatestSpeeds() {
-            fetch('/latest_speed')
-                .then(response => response.json())
-                .then(data => {
-                    document.getElementById('download_value').innerText = data.download_speed.toFixed(2) + " Mbps";
-                    document.getElementById('upload_value').innerText = data.upload_speed.toFixed(2) + " Mbps";
-                    setStatus(data.status);
-                    updatePlot();
-                })
-                .catch(error => console.error('Error fetching latest speeds:', error));
-        }
+        socket.on('speed_update', (data) => {
+            document.getElementById('download_value').innerText = data.download_speed.toFixed(2) + " Mbps";
+            document.getElementById('upload_value').innerText = data.upload_speed.toFixed(2) + " Mbps";
+            setStatus(data.status);
+            updatePlot();
+        });
+        socket.on('status_update', (data) => {
+            setStatus(data.status);
+        });
 
-        function runSpeedTest() {
-            //setStatus("Running");
-            fetch('/speedtest')
-                .then(response => response.json())
-                .then(data => {
-                    if (data.error) {
-                        alert(data.error);
-                        setStatus("Error");
-                    } else {
-                        document.getElementById('download_value').innerText = data.download_speed.toFixed(2) + " Mbps";
-                        document.getElementById('upload_value').innerText = data.upload_speed.toFixed(2) + " Mbps";
-                        //setStatus("Idle");
-                    }
-                })
-                .catch(error => {
-                    console.error('Error running speed test:', error);
-                    setStatus("Error");
-                });
+
+        function setStatus(status) {
+            document.getElementById('status_text').innerText = status;
         }
 
         function updatePlot() {
@@ -139,10 +121,19 @@
             plotImage.src = '/plot?' + new Date().getTime();  // Add a timestamp to force the browser to reload the image
         }
 
-        function setStatus(status) {
-            document.getElementById('status_text').innerText = status;
+        function runSpeedTest() {
+            fetch('/speedtest')
+                .then(response => response.json())
+                .then(data => {
+                    if (data.error) {
+                        alert(data.error);
+                    }
+                })
+                .catch(error => {
+                    console.error('Error running speed test:', error);
+                    setStatus("Error");
+                });
         }
-       
     </script>
 </body>
 </html>
