--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -95,7 +95,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.3.2/socket.io.js"></script>
     <script>
-        const socket = io.connect('http://localhost:5000');
+        const socket = io.connect(window.location.origin);
 
         socket.on('connect', () => {
             console.log('Connected to server');
